load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "debug",
    srcs = [
        "cpuprofile.go",
        "logspy.go",
        "pebble_debug_span.go",
        "queries_writer.go",
        "scanner.go",
        "server.go",
        "vmodule.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/server/debug",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/base",
        "//pkg/keys",
        "//pkg/kv/kvserver",
        "//pkg/kv/kvserver/closedts/sidetransport",
        "//pkg/roachpb",
        "//pkg/security/username",
        "//pkg/server/debug/goroutineui",
        "//pkg/server/debug/pprofui",
        "//pkg/server/serverpb",
        "//pkg/settings",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/catalog/colinfo",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sessiondata",
        "//pkg/storage",
        "//pkg/util/encoding/csv",
        "//pkg/util/log",
        "//pkg/util/log/channel",
        "//pkg/util/log/logpb",
        "//pkg/util/log/severity",
        "//pkg/util/stop",
        "//pkg/util/timeutil",
        "//pkg/util/uint128",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_cockroachdb_pebble//:pebble",
        "@com_github_cockroachdb_pebble//tool",
        "@com_github_cockroachdb_pebble//vfs",
        "@com_github_cockroachdb_redact//:redact",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_rcrowley_go_metrics//:go-metrics",
        "@com_github_rcrowley_go_metrics//exp",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_x_net//trace",
    ],
)

go_test(
    name = "debug_test",
    size = "small",
    srcs = ["logspy_test.go"],
    embed = [":debug"],
    deps = [
        "//pkg/testutils",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/log/logpb",
        "//pkg/util/syncutil",
        "@com_github_cockroachdb_errors//:errors",
    ],
)
